--- a/.env
+++ b/.env
@@ -4,8 +4,13 @@ SECRET_KEY_REFRESH_TOKEN = refresh_token_secret
 
 
 #DB
-HOST = 127.0.0.1
-DB_PORT = 3306
-USER_NAME = root
-DB_PASSWORD = 
-DB_NAME = mobile
+MYSQLDB_HOST=mysql
+MYSQLDB_USER=root
+MYSQLDB_PASSWORD=root
+MYSQLDB_DATABASE=mobile
+MYSQLDB_LOCAL_PORT=3307
+MYSQLDB_DOCKER_PORT=3306
+
+#Backend
+BACKEND_LOCAL_PORT = 3000
+BACKEND_DOCKER_PORT = 3000
