--- a/.env
+++ b/.env
@@ -3,14 +3,28 @@ SECRET_KEY_ACCESS_TOKEN = access_token_secret
 SECRET_KEY_REFRESH_TOKEN = refresh_token_secret
 
 
+# #DB
+# MYSQLDB_HOST=mysql
+# MYSQLDB_USER=root
+# MYSQLDB_PASSWORD=root
+# MYSQLDB_DATABASE=mobile
+# MYSQLDB_LOCAL_PORT=3307
+# MYSQLDB_DOCKER_PORT=3306
+
 #DB
-MYSQLDB_HOST=mysql
+MYSQLDB_HOST=localhost
 MYSQLDB_USER=root
-MYSQLDB_PASSWORD=root
+MYSQLDB_PASSWORD=
 MYSQLDB_DATABASE=mobile
-MYSQLDB_LOCAL_PORT=3307
+MYSQLDB_LOCAL_PORT=3306
 MYSQLDB_DOCKER_PORT=3306
 
 #Backend
 BACKEND_LOCAL_PORT = 3000
 BACKEND_DOCKER_PORT = 3000
+
+
+#FIREBASE
+FIREBASE_PROJECT_ID = 33434
+FIREBASE_CLIENT_EMAIL = DONG123@GMAIL.COM
+FIREBASE_PRIVATE_KEY = DSKDSJDS
