--- a/.env
+++ b/.env
@@ -4,20 +4,20 @@ SECRET_KEY_REFRESH_TOKEN = refresh_token_secret
 
 
 # #DB
-# MYSQLDB_HOST=mysql
-# MYSQLDB_USER=root
-# MYSQLDB_PASSWORD=root
-# MYSQLDB_DATABASE=mobile
-# MYSQLDB_LOCAL_PORT=3307
-# MYSQLDB_DOCKER_PORT=3306
+MYSQLDB_HOST=mysql
+MYSQLDB_USER=root
+MYSQLDB_PASSWORD=root
+MYSQLDB_DATABASE=mobile
+MYSQLDB_LOCAL_PORT=3307
+MYSQLDB_DOCKER_PORT=3306
 
 #DB
-MYSQLDB_HOST=localhost
-MYSQLDB_USER=root
-MYSQLDB_PASSWORD=
-MYSQLDB_DATABASE=mobile
-MYSQLDB_LOCAL_PORT=3306
-MYSQLDB_DOCKER_PORT=3306
+# MYSQLDB_HOST=localhost
+# MYSQLDB_USER=root
+# MYSQLDB_PASSWORD=
+# MYSQLDB_DATABASE=mobile
+# MYSQLDB_LOCAL_PORT=3306
+# MYSQLDB_DOCKER_PORT=3306
 
 #Backend
 BACKEND_LOCAL_PORT = 3000
